--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  box-sizing: border-box;
+  background: linear-gradient(to right, #3c7da3, #194f70, #074d6b); }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace; }
+
+.App .card-list {
+  width: 85vw;
+  color: white;
+  display: grid;
+  margin: 0 auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px; }
+
+.card-container {
+  display: flex;
+  direction: column;
+  background-color: #95dada;
+  border-radius: 5px;
+  border: 1px solid gray;
+  padding: 25px;
+  transform: translateZ(0);
+  transition: all .3s;
+  backface-visibility: hidden;
+  cursor: pointer; }
+  .card-container:hover {
+    transform: scale(1.05); }
